--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bone - Creative Agency Portfolio Template</title>
+    <title>Ngqtuan@98</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
