--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="description" content="profile" />
+    <meta name="keywords" content="ngqtuan98" />
+    <meta name="author" content="Tuan Nguyen" />
     <link rel="stylesheet" type="text/css" href="css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
-    <link rel="icon" type="image/png" href="favicon.png?v=2" />
+    <link rel="icon" type="image/png" href="images/ui/logo-bold-white-50.png" />
     <script src="js/assets/jquery.js"></script>
     <link rel="stylesheet" href="css/progres-bar.css" />
   </head>
@@ -225,7 +228,7 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/player.js"></script>
     <script type="text/javascript">
-       $(document).ready(function () {
+      $(document).ready(function () {
         $(".mediPlayer").mediaPlayer();
       });
     </script>
