--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="description" content="profile" />
     <meta name="keywords" content="ngqtuan98" />
     <meta name="author" content="Tuan Nguyen" />
+    <meta property="og:image" content="images/ui/logo-bold-white-50.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="1024" />
     <link rel="stylesheet" type="text/css" href="css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
