--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     <meta name="description" content="profile" />
     <meta name="keywords" content="ngqtuan98" />
     <meta name="author" content="Tuan Nguyen" />
-    <meta property="og:image" content="images/ui/logo-bold-white-50.png" />
+
+    <meta property="og:image" content="images/ui/logo.jpg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.website.com/" />
+    <meta property="og:title" content="Website title" />
+    <meta property="og:description" content="Website description." />
+
     <link rel="stylesheet" type="text/css" href="css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
