--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="1024" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.website.com/" />
-    <meta property="og:title" content="Website title" />
-    <meta property="og:description" content="Website description." />
+    <meta property="og:url" content="https://ngqtuan98.com/" />
+    <meta property="og:title" content="Ngqtuan@98" />
+    <meta property="og:description" content="This is my life." />
 
     <link rel="stylesheet" type="text/css" href="css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
