--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="keywords" content="ngqtuan98" />
     <meta name="author" content="Tuan Nguyen" />
 
-    <meta property="og:image" content="images/ui/logo.jpg" />
+    <meta property="og:image" content="images/ui/logo2.jpg" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="1024" />
+    <meta property="og:image:width" content="768" />
+    <meta property="og:image:height" content="432" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ngqtuan98.com/" />
     <meta property="og:title" content="Ngqtuan@98" />
