--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
-    <link rel="icon" type="image/png" href="images/ui/logo-bold-white-50.png" />
+    <link rel="icon" type="image/png" href="images/ui/logo-tn-white.png" />
     <script src="js/assets/jquery.js"></script>
     <link rel="stylesheet" href="css/progres-bar.css" />
   </head>
@@ -122,12 +122,8 @@
           <!-- Branding-->
           <div class="flex-inline">
             <a href="index.html" class="brand">
-              <img alt="" src="images/ui/logo-bold-50.png" class="dark-brand" />
-              <img
-                alt=""
-                src="images/ui/logo-bold-white-50.png"
-                class="light-brand"
-              />
+              <img alt="" src="images/ui/logo-tn.png" class="dark-brand" />
+              <img alt="" src="images/ui/logo-tn-white.png" class="light-brand" />
             </a>
             <!-- Media Player-->
             <div class="mediPlayer">
