--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
           </a>
         </li>
       </ul>
-      <div class="copyright">
+      <!-- <div class="copyright">
         2016 &copy; Bone Template. All rights reserved.
-      </div>
+      </div> -->
       <div class="exit"></div>
       <ul class="social">
         <li><a href="#" class="fa fa-twitter"></a></li>
@@ -202,18 +202,11 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <div class="title-block">
-                <h3>From Zero to Hero</h3>
-                <h5>Bone expands your possibilities</h5>
+                <h3>Hi! I'm Tuan Nguyen</h3>
+                <h6>"Where do you want to go? Far, far away."</h6>
               </div>
               <p>
-                Sed lacus augue, congue vel dapibus at, convallis semper lorem.
-                Etiam volutpat, est eget feugiat tristique, erat leo ullamcorper
-                turpis, vel auctor nunc diam vitae urna. Aliquam quis lacus et
-                augue bibendum tincidunt. Duis id cursus ex. Sed cursus tortor
-                id vehicula finibus. Nulla in pharetra lacus. Nulla nec elit nec
-                sem feugiat eleifend sed sed neque. Mauris consequat in purus id
-                cursus. Nunc suscipit lacinia ante, sit amet pulvinar orci
-                venenatis a.
+              4 years ago I used to work as multimedia communication, then Life flows propelled brought me work as "coder" and now I am working as a developer platform.
               </p>
             </div>
           </div>
