--- a/index.html
+++ b/index.html
@@ -33,73 +33,16 @@
     <div class="nav-container">
       <ul class="nav">
         <li>
-          <a href="#">Portfolio </a>
-          <ul class="dropdown">
-            <li>
-              <a href="pages/portfolio-3-col.html">3 Columns - Masonry</a>
-            </li>
-            <li>
-              <a href="pages/portfolio-no-spacing.html"
-                >3 Columns - No Spacing</a
-              >
-            </li>
-            <li>
-              <a href="pages/portfolio-lightbox.html">Lightbox Portfolio</a>
-            </li>
-            <li><a href="pages/portfolio-single.html">Single Item #1</a></li>
-            <li><a href="pages/portfolio-single-2.html">Single Item #2</a></li>
-          </ul>
-        </li>
-        <li>
           <a href="#">Pages </a>
           <ul class="dropdown">
             <li><a href="index.html">Home</a></li>
-            <li><a href="pages/about-us.html">About Us</a></li>
-            <li><a href="pages/about-me.html">About Me</a></li>
-            <li><a href="pages/services.html">Services</a></li>
-            <li><a href="pages/error-404.html">Error 404</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
           </ul>
         </li>
         <li>
-          <a href="#">Blog </a>
+          <a href="#">Blog</a>
           <ul class="dropdown">
-            <li><a href="pages/blog.html">Blog - Classic</a></li>
-            <li><a href="pages/blog-images.html">Blog - Thumbs</a></li>
-            <li><a href="pages/blog-post.html">Post - Classic</a></li>
-            <li><a href="pages/blog-post-image.html">Post - Hero</a></li>
+            <li><a href="../pages/shop.html">My pic</a></li>
           </ul>
-        </li>
-        <li>
-          <a href="#">Features </a>
-          <ul class="dropdown">
-            <li><a href="pages/hero-fs.html">Fullscreen Hero</a></li>
-            <li><a href="pages/hero-dark.html">Dark Hero</a></li>
-            <li><a href="pages/boxed-layout.html">Boxed Layout</a></li>
-            <li>
-              <a href="pages/tera-slider.html"
-                >Tera Slider <span class="label">3.1</span></a
-              >
-            </li>
-            <li><a href="pages/tera-carousel.html">Carousel</a></li>
-            <li><a href="pages/elements.html">Elements</a></li>
-            <li><a href="pages/menu-classic.html">Classic Menu</a></li>
-            <li><a href="pages/one-page.html">One-page Website</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Shop </a>
-          <ul class="dropdown">
-            <li><a href="pages/shop.html">Shop overview</a></li>
-            <li><a href="pages/product.html">Product page</a></li>
-            <li><a href="pages/cart.html">Cart</a></li>
-          </ul>
-        </li>
-        <li>
-          <a
-            href="http://themeforest.net/item/bone-responsive-agency-portfolio-html-template/15299321"
-            >Buy Bone
-          </a>
         </li>
       </ul>
       <!-- <div class="copyright">
@@ -107,11 +50,11 @@
       </div> -->
       <div class="exit"></div>
       <ul class="social">
-        <li><a href="#" class="fa fa-twitter"></a></li>
-        <li><a href="#" class="fa fa-dribbble"></a></li>
-        <li><a href="#" class="fa fa-facebook"></a></li>
-        <li><a href="#" class="fa fa-instagram"></a></li>
-        <li><a href="#" class="fa fa-pinterest"></a></li>
+        <li><a href="https://bit.ly/ngqtuan98" class="fa fa-twitter"></a></li>
+        <li><a href="https://bit.ly/ngqtuan98" class="fa fa-dribbble"></a></li>
+        <li><a href="https://bit.ly/ngqtuan98" class="fa fa-facebook"></a></li>
+        <li><a href="https://bit.ly/ngqtuan98" class="fa fa-instagram"></a></li>
+        <li><a href="https://bit.ly/ngqtuan98" class="fa fa-pinterest"></a></li>
       </ul>
     </div>
     <!-- Wrapper-->
@@ -123,7 +66,11 @@
           <div class="flex-inline">
             <a href="index.html" class="brand">
               <img alt="" src="images/ui/logo-tn.png" class="dark-brand" />
-              <img alt="" src="images/ui/logo-tn-white.png" class="light-brand" />
+              <img
+                alt=""
+                src="images/ui/logo-tn-white.png"
+                class="light-brand"
+              />
             </a>
             <!-- Media Player-->
             <div class="mediPlayer">
@@ -206,7 +153,9 @@
                 <h6>"Where do you want to go? Far, far away."</h6>
               </div>
               <p>
-              4 years ago I used to work as multimedia communication, then Life flows propelled brought me work as "coder" and now I am working as a developer platform.
+                4 years ago I used to work as multimedia communication, then
+                Life flows propelled brought me work as "coder" and now I am
+                working as a developer platform.
               </p>
             </div>
           </div>
