--- a/pages/preset.html
+++ b/pages/preset.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ngqtuan@98 | My picture</title>
+    <title>Ngqtuan@98 | Lr</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
@@ -11,7 +11,7 @@
     <meta name="keywords" content="ngqtuan98" />
     <meta name="author" content="Tuan Nguyen" />
 
-    <meta property="og:image" content="https://i.imgur.com/4rEEryQ.jpg" />
+    <meta property="og:image" content="https://i.imgur.com/CjOcdVE.jpeg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="768" />
     <meta property="og:image:height" content="432" />
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="../css/progres-bar.css" />
 </head>
 
-<body>
+<body class="dark-hero boxed">
   <div class="body-overlay"></div>
   <!-- Menu-->
   <div class="nav-container">
@@ -74,7 +74,7 @@
         <div class="flex-inline">
           <a href="../index.html" class="brand">
             <img alt="" src="../images/ui/logo-tn.png" class="dark-brand" />
-            <img alt="" src="../images/ui/logo-tn.png" class="light-brand" />
+            <img alt="" src="../images/ui/logo-tn-white.png" class="light-brand" />
           </a>
         </div>
         <div class="">
@@ -83,104 +83,44 @@
         </div>
       </div>
     </header>
-    <!-- Hero-->
-    <section class="hero behind vbottom">
-      <div class="container">
+    <section class="hero dark vcenter">
+      <!-- Background-->
+      <div style="background-image: url(https://i.imgur.com/CjOcdVE.jpeg)" class="bg faded-subtle parallax"></div>
+      <div class="container text-center">
         <!-- Content-->
         <div class="content">
-          <h1>My picture</h1>
-          <!-- <p>Bone - Responsive HTML5 Template</p> -->
+          <h1 class="lg">My Preset lightroom | Lr.</h1>
         </div>
       </div>
     </section>
     <section>
-      <div class="container">
-        <!-- Shop grid-->
-        <div class="grid shop">
-          <div class="grid-sizer"></div>
-          <!-- Shop item-->
-          <div class="grid-item">
-            <div class="sale">:)</div>
-            <div style="background-image: url(https://i.imgur.com/4rEEryQ.jpg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
+      <div class="container content">
+        <div class="row">
+          <div class="col-md-12">
+            <img alt="" src="https://i.imgur.com/Tl2nlgA.jpg" class="item" /><img alt="" src="https://i.imgur.com/PxluSSa.jpeg"
+              class="item" />
           </div>
-          <!-- Shop item-->
-          <div class="grid-item">
-            <div style="background-image: url(https://i.imgur.com/kQHqCkB.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
+        </div>
+      </div>
+      <div class="container content">
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3">
+            <blockquote class="item">
+              Quitters don't win. Winners don't quit.
+            </blockquote>
           </div>
-          <!-- Shop item-->
-          <div href="https://bit.ly/ngqtuan98" class="grid-item tall">
-            <div class="sale">(>-^)</div>
-            <div style="background-image: url(https://i.imgur.com/K2Ornni.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
+        </div>
+      </div>
+      <div class="container content">
+        <div class="row">
+          <div class="col-md-4">
+            <img alt="" src="https://i.imgur.com/CjOcdVE.jpeg" class="item" />
           </div>
-          <!-- Shop item-->
-          <div class="grid-item tall">
-            <div style="background-image: url(https://i.imgur.com/UybqyKX.jpg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
+          <div class="col-md-4">
+            <img alt="" src="https://i.imgur.com/Tl2nlgA.jpg" class="item" />
           </div>
-          <!-- Shop item-->
-          <div class="grid-item">
-            <div style="background-image: url(https://i.imgur.com/CjOcdVE.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
-          </div>
-          <!-- Shop item-->
-          <div class="grid-item large">
-            <div class="sale">(^_^)</div>
-            <div style="background-image: url(https://i.imgur.com/U8iQsGg.jpg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
-          </div>
-          <!-- Shop item-->
-          <div class="grid-item tall">
-            <div style="background-image: url(https://i.imgur.com/5yaI03o.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
-          </div>
-          <!-- Shop item-->
-          <div class="grid-item">
-            <div style="background-image: url(https://i.imgur.com/QOWb6st.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
-          </div>
-          <!-- Shop item-->
-          <div class="grid-item">
-            <div style="background-image: url(https://i.imgur.com/0VIhNwA.jpeg)" class="thumb"></div>
-            <a href="https://bit.ly/ngqtuan98" class="caption">
-              <div class="inner">
-                <h4>Coming soon...</h4>
-              </div>
-            </a>
+          <div class="col-md-4">
+            <img alt="" src="https://i.imgur.com/PxluSSa.jpeg" class="item" />
           </div>
         </div>
       </div>
