--- a/index.html
+++ b/index.html
@@ -30,21 +30,27 @@
   <body>
     <div class="body-overlay"></div>
     <!-- Menu-->
-    <div class="nav-container">
-      <ul class="nav">
-        <li>
-          <a href="#">Pages </a>
-          <ul class="dropdown">
-            <li><a href="index.html">Home</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-          <ul class="dropdown">
-            <li><a href="../pages/shop.html">My pic</a></li>
-          </ul>
-        </li>
-      </ul>
+  <div class="nav-container">
+    <ul class="nav">
+      <li>
+        <a href="#">Pages</a>
+        <ul class="dropdown">
+          <li><a href="../index.html">Home</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Blog</a>
+        <ul class="dropdown">
+          <li><a href="../pages/shop.html">My pic</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Tutorials</a>
+        <ul class="dropdown">
+          <li><a href="../pages/preset.html">Preset | Lr</a></li>
+        </ul>
+      </li>
+    </ul>
       <!-- <div class="copyright">
         2016 &copy; Bone Template. All rights reserved.
       </div> -->
