--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <!-- Background-->
             <div class="hero fs vbottom">
               <div
-                style="background-image: url(images/post/banner-3.jpg)"
+                style="background-image: url(https://i.imgur.com/9sQKaOJ.jpg)"
                 class="bg faded _5 parallax"
               ></div>
               <div class="container text-center offset-top">
@@ -117,7 +117,7 @@
             <!-- Background-->
             <div class="hero fs vcenter">
               <div
-                style="background-image: url(images/post/banner-2.jpg)"
+                style="background-image: url(https://i.imgur.com/sXjdtbC.jpg)"
                 class="bg faded _5 parallax"
               ></div>
               <div class="container text-center">
@@ -134,7 +134,7 @@
             <!-- Background-->
             <div class="hero fs vbottom">
               <div
-                style="background-image: url(images/post/banner-1.jpg)"
+                style="background-image: url(https://i.imgur.com/pVbDJHj.jpg)"
                 class="bg faded-subtle parallax"
               ></div>
               <div class="container">
