--- a/pages/preset.html
+++ b/pages/preset.html
@@ -37,6 +37,7 @@
         <a href="#">Pages</a>
         <ul class="dropdown">
           <li><a href="../index.html">Home</a></li>
+          <li><a href="https://bit.ly/ngqtuan98">My Portfolio</a></li>
         </ul>
       </li>
       <li>
