--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 working as a developer platform.
               </p>
             </div>
-            <div
+            <div class="col-md-8 col-md-offset-2"
               style="display: flex; justify-content: center; margin-top: 10%"
             >
               <iframe
