--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <a href="#">Tutorials</a>
           <ul class="dropdown">
             <li><a href="../pages/preset.html">Preset | Lr</a></li>
+            <li><a href="../pages/blog-13.html">Blog | 13</a></li>
           </ul>
         </li>
       </ul>
