--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             <div class="col-md-8 col-md-offset-2"
               style="display: flex; justify-content: center; margin-top: 5%"
             >
-              <iframe
+              <img alt="" src="./images/me/tn.jpg"/>
+              <!-- <iframe
                 width="560"
                 height="315"
                 src="https://www.youtube.com/embed/qAPgWMo2u-E?controls=0"
@@ -180,7 +181,7 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
-              ></iframe>
+              ></iframe> -->
             </div>
           </div>
         </div>
