--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="col-md-8 col-md-offset-2"
               style="display: flex; justify-content: center; margin-top: 5%"
             >
-              <img alt="" src="./images/me/tn.jpg"/>
+              <img style="width:70%" alt="" src="./images/me/tn.jpg"/>
               <!-- <iframe
                 width="560"
                 height="315"
