--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="ngqtuan98" />
     <meta name="author" content="Tuan Nguyen" />
 
-    <meta property="og:image" content="images/ui/logo2.jpg" />
+    <meta property="og:image" content="images/me/tn.jpg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="768" />
     <meta property="og:image:height" content="432" />
