--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
   <body>
     <div class="body-overlay"></div>
+    <div id="cursor">
+      <span class="more">
+          <ion-icon name="add-circle-outline"></ion-icon>
+      </span>
+    </div>
     <!-- Menu-->
     <div class="nav-container">
       <ul class="nav">
@@ -188,6 +193,7 @@
       </section>
     </div>
 
+    <script src="js/main.js"></script>
     <script src="js/assets/bootstrap.js"></script>
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
     <script src="js/assets/validation.js"></script>
@@ -202,6 +208,7 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $(".mediPlayer").mediaPlayer();
+         
       });
     </script>
   </body>
